observe-metrics/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: observe-metrics-gateway
spec: 
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
